make opinion container fixed height on responsive to avoid jumping container height during transitions for opinions; update spacing on hero elements and slightly improve transition performance of selected and unselected opinions

--- a/src/components/HeroCall.css
+++ b/src/components/HeroCall.css
@@ -60,14 +60,14 @@
 
 @media screen and (max-width: 1000px) {
   .hero-call-container {
-    top: 275px;
+    top: 250px;
     width: 350px;
   }
 }
 
 @media screen and (max-width: 800px) {
   .hero-call-container {
-    top: 260px;
+    top: 230px;
     width: 250px;
   }
 }
