--- a/src/components/Selected.css
+++ b/src/components/Selected.css
@@ -7,6 +7,7 @@
   width: 488.7px;
   height: 287.7px;
   transition: width 150ms ease-in, height 150ms ease-in, background-color 150ms ease-in;
+  will-change: width, height, background-color;
 }
 
 .bio-last-selected {
@@ -26,6 +27,7 @@
   justify-content: center;
   align-items: center;
   transition: width 150ms ease-in, height 150ms ease-in, background-color 150ms ease-in;
+  will-change: width, height, background-color;
 }
 
 .bio-image-filter-selected {
@@ -37,6 +39,7 @@
   z-index: 1;
   opacity: .5;
   transition: width 150ms ease-in, height 150ms ease-in, background-color 150ms ease-in, opacity 150ms ease-in;
+  will-change: width, height, background-color, opacity;
 }
 
 .bio-image-selected {
@@ -47,6 +50,7 @@
   width: 70px;
   height: 70px;
   transition: width 100ms ease-in, height 100ms ease-in;
+  will-change: width, height;
 }
 
 .bio-header-selected {
@@ -58,6 +62,7 @@
   justify-content: space-between;
   align-items: center;
   transition: width 150ms ease-in, height 150ms ease-in;
+  will-change: width, height;
 }
 
 .bio-name-selected {
@@ -74,6 +79,7 @@
   padding: 0;
   color: #8747ab;
   transition: width 150ms ease-in, height 150ms ease-in, font-size 150ms ease-in, color 150ms ease-in;
+  will-change: width, height, font-size;
 }
 
 .bio-title-selected {
@@ -91,6 +97,7 @@
   padding: 0;
   color: #506883;
   transition: width 150ms ease-in, height 150ms ease-in, font-size 150ms ease-in, color 150ms ease-in;
+  will-change: width, height, font-size;
 }
 
 .bio-star-selected {
@@ -103,6 +110,7 @@
   width: 402px;
   height: 122px;
   transition: width 150ms ease-in, height 150ms ease-in;
+  will-change: width, height;
 }
 
 .bio-text-selected {
@@ -118,6 +126,7 @@
   width: 402px;
   height: 122px;
   transition: width 150ms ease-in, height 150ms ease-in, font-size 150ms ease-in, color 150ms ease-in;
+  will-change: width, height, font-size;
 }
 
 
