--- a/src/components/Unselected.css
+++ b/src/components/Unselected.css
@@ -7,6 +7,7 @@
   position: relative;
   margin-right: 32px;
   transition: width 150ms ease-in, height 150ms ease-in, background-color 150ms ease-in;
+  will-change: width, height, background-color;
 }
 
 .bio-last-unselected {
@@ -26,6 +27,7 @@
   justify-content: center;
   align-items: center;
   transition: width 150ms ease-in, height 150ms ease-in, background-color 150ms ease-in;
+  will-change: width, height, background-color;
 }
 
 .bio-image-filter-unselected {
@@ -37,6 +39,7 @@
   z-index: 1;
   opacity: .5;
   transition: width 150ms ease-in, height 150ms ease-in, background-color 150ms ease-in, opacity 150ms ease-in;
+  will-change: width, height, background-color;
 }
 
 .bio-image-unselected {
@@ -47,6 +50,7 @@
   width: 59px;
   height: 59px;
   transition: width 100ms ease-in, height 100ms ease-in;
+  will-change: width, height;
 }
 
 .bio-header-unselected {
@@ -58,6 +62,7 @@
   justify-content: space-between;
   align-items: center;
   transition: width 150ms ease-in, height 150ms ease-in;
+  will-change: width, height;
 }
 
 .bio-name-unselected {
@@ -74,6 +79,7 @@
   margin: 0;
   padding: 0;
   transition: width 150ms ease-in, height 150ms ease-in, font-size 150ms ease-in, color 150ms ease-in;
+  will-change: width, height, font-size;
 }
 
 .bio-title-unselected {
@@ -91,6 +97,7 @@
   margin: 0;
   padding: 0;
   transition: width 150ms ease-in, height 150ms ease-in, font-size 150ms ease-in, color 150ms ease-in;
+  will-change: width, height, font-size;
 }
 
 .bio-star-unselected {
@@ -103,6 +110,7 @@
   width: 344px;
   height: 105px;
   transition: width 150ms ease-in, height 150ms ease-in;
+  will-change: width, height;
 }
 
 .bio-text-unselected {
@@ -119,6 +127,7 @@
   color: #506883;
   margin: 0;
   transition: width 150ms ease-in, height 150ms ease-in, font-size 150ms ease-in, color 150ms ease-in;
+  will-change: width, height, font-size;
 }
 
 
