--- a/src/components/sections/Hero.css
+++ b/src/components/sections/Hero.css
@@ -48,7 +48,7 @@
 
 @media screen and ( max-width: 800px ) {
   .title {
-    top: 210px;
+    top: 170px;
     width: 90%;
   }
 
